--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,18 @@
-/* You can add global styles to this file, and also import other style files */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+html, body {
+  margin: 0;
+  padding: 0;
+  font-family: 'Roboto', sans-serif;
+
+  &.dark-mode {
+    background-color: #121212;
+    color: white;
+  }
+}
+
+.error-toast {
+  @apply bg-red-500 text-white;
+}
