--- a/src/app/components/catalogue/catalogue.component.scss
+++ b/src/app/components/catalogue/catalogue.component.scss
@@ -10,7 +10,7 @@
   overflow: hidden;
   position: relative;
   background-image:
-    url('/assets/images/bg-image1.jpg'),
+    url('https://res.cloudinary.com/dnubciisu/image/upload/v1752360295/cyber-monday-retail-sales_dkrrfg.jpg'),
     linear-gradient(135deg, #e7efe7 0%, #ebf4eb 100%);
   background-size: cover;
   background-position: center;
